Terraform-EKS/security_groups_eks.tf
# Master Node Security Group

resource "aws_security_group" "eks-cluster-sg" {
  name = "terraform-eks-cluster-sg"
  description = "Cluster communication with worker nodes"
  vpc_id = "${aws_vpc.eks-vpc.id}"
  egress {
      froom_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]

  }
   tags {
       Name = "terraform-eks-cluster-sg"
   }
}
